traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.2
        name: traefik-ingress-lb
        args:
        - --api.insecure=true
        - --providers.kubernetesingress=true
        - --entrypoints.web.address=:80
        - --entrypoints.websecure.address=:443
        - --entrypoints.websecure.http.tls.certresolver=myhttpchallenge
        - --certificatesresolvers.myhttpchallenge.acme.httpchallenge=true
        - --certificatesresolvers.myhttpchallenge.acme.httpchallenge.entrypoint=web
        - --certificatesresolvers.myhttpchallenge.acme.email=jchorlton+traefikcerts@gmail.com
        - --certificatesresolvers.myhttpchallenge.acme.storage=/letsencrypt/acme.json
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        volumeMounts:
        - name: letsencrypt-storage
          mountPath: /letsencrypt
      volumes:
      - name: letsencrypt-storage
        hostPath:
          path: /data/letsencrypt
          type: DirectoryOrCreate
      nodeSelector:
        dedicated: ingress
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "ingress"
        effect: "NoSchedule"
