traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30080
      name: web
    - protocol: TCP
      port: 443
      nodePort: 30443
      name: https
    - protocol: TCP
      port: 8080
      nodePort: 30880
      name: admin
